--- a/market-dependencies/pom.xml
+++ b/market-dependencies/pom.xml
@@ -16,6 +16,7 @@
         <donwae.market.version>1.0.0.RELEASE</donwae.market.version>
         <mysql.version>8.0.11</mysql.version>
         <mybatis.spring.version>1.3.0</mybatis.spring.version>
+        <apache.shiro.version>1.2.5</apache.shiro.version>
     </properties>
 
     <dependencyManagement>
@@ -43,6 +44,11 @@
                 <groupId>org.mybatis.spring.boot</groupId>
                 <artifactId>mybatis-spring-boot-starter</artifactId>
                 <version>${mybatis.spring.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.shiro</groupId>
+                <artifactId>shiro-spring</artifactId>
+                <version>${apache.shiro.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
