--- a/market-muskmelon/pom.xml
+++ b/market-muskmelon/pom.xml
@@ -22,11 +22,11 @@
 			<artifactId>market-core</artifactId>
 			<version>${donwae.market.version}</version>
 		</dependency>
-		<!--<dependency>-->
-			<!--<groupId>com.donwae.market</groupId>-->
-			<!--<artifactId>market-shiro</artifactId>-->
-			<!--<version>${donwae.market.version}</version>-->
-		<!--</dependency>-->
+		<dependency>
+			<groupId>com.donwae.market</groupId>
+			<artifactId>market-shiro</artifactId>
+			<version>${donwae.market.version}</version>
+		</dependency>
 	</dependencies>
 
 </project>
