--- a/market-dependencies/pom.xml
+++ b/market-dependencies/pom.xml
@@ -58,28 +58,10 @@
             <!-- Apache Lucene -->
             <dependency>
                 <groupId>org.apache.lucene</groupId>
-                <artifactId>lucene-core</artifactId>
+                <artifactId>lucene-solr-grandparent</artifactId>
                 <version>${apache.lucene.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.apache.lucene</groupId>
-                <artifactId>lucene-analyzers-common</artifactId>
-                <version>${apache.lucene.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.apache.lucene</groupId>
-                <artifactId>lucene-analyzers-smartcn</artifactId>
-                <version>${apache.lucene.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.apache.lucene</groupId>
-                <artifactId>lucene-queryparser</artifactId>
-                <version>${apache.lucene.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.apache.lucene</groupId>
-                <artifactId>lucene-highlighter</artifactId>
-                <version>${apache.lucene.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
             </dependency>
             <!-- Apache Commons -->
             <dependency>
