--- a/market-batch/src/main/resources/application.yml
+++ b/market-batch/src/main/resources/application.yml
@@ -9,3 +9,5 @@ spring:
     schema: classpath:/org/springframework/batch/core/schema-mysql.sql
   batch:
     initialize-schema: always
+#    job:
+#      names: parentJob
